# nlc

./: README.md  helloworld.n  lexer_test.nl  linux-native.ini  meson.build  parsertest.n  parsertest_label.n  test.n
include/: ast.hpp  lexer.h  lexer.hpp  parser.hpp  util.hpp
include/config/: config.hpp
include/lexer/: lexer.hpp  token.hpp
include/parser/: ast.hpp  parser.hpp
libnlc/: cstnode.cpp  lexer.cpp  meson.build  parser.cpp  token.cpp
libnlc/config/: config.cpp  meson.build
libnlc/lexer/: lexer.cpp  meson.build  token.cpp
libnlc/parser/: arglist.cpp  arrayelem.cpp  ast.cpp  call.cpp  callop.cpp  casestmt.cpp  cst.cpp  cstnode.cpp  decldef.cpp  deferstmt.cpp  entry.cpp  enum.cpp  export.cpp  expr.cpp  funcarg.cpp  funcdecldef.cpp  funcproto.cpp  funcptrtype.cpp  generic.cpp  gotostmt.cpp  idop.cpp  idstmt.cpp  ifstmt.cpp  import.cpp  initlist.cpp  label.cpp  labelstmt.cpp  loopstmts.cpp  meson.build  module.cpp  parser.cpp  returnstmt.cpp  stmt.cpp  struct.cpp  switchstmt.cpp  template.cpp  top.cpp  type.cpp  typedef.cpp  typeraw.cpp  (+3 more)
libnlc/util/: meson.build  util.cpp
src/: argparser.hpp  args.h  main.cpp  meson.build
src/error_handler/: error_handler.cpp  error_handler.hpp  meson.build
src/info/: info.cpp  info.hpp  meson.build
src/util/: meson.build  util.cpp  util.hpp
tests/: meson.build
tests/lexertest/: main.cpp  meson.build
