libnlc_src += [
  'libnlc/parser/parser.cpp',

  'libnlc/parser/ast.cpp',
  'libnlc/parser/call.cpp',
  'libnlc/parser/casestmt.cpp',
  'libnlc/parser/decldef.cpp',
  'libnlc/parser/deferstmt.cpp',
  'libnlc/parser/enum.cpp',
  'libnlc/parser/export.cpp',
  'libnlc/parser/expr.cpp',
  'libnlc/parser/funcarg.cpp',
  'libnlc/parser/funcdecldef.cpp',
  'libnlc/parser/funcproto.cpp',
  'libnlc/parser/gotostmt.cpp',
  'libnlc/parser/idstmt.cpp',
  'libnlc/parser/ifstmt.cpp',
  'libnlc/parser/import.cpp',
  'libnlc/parser/initlist.cpp',
  'libnlc/parser/label.cpp',
  'libnlc/parser/labelstmt.cpp',
  'libnlc/parser/loopstmts.cpp',
  'libnlc/parser/module.cpp',
  'libnlc/parser/returnstmt.cpp',
  'libnlc/parser/stmt.cpp',
  'libnlc/parser/struct.cpp',
  'libnlc/parser/switchstmt.cpp',
  'libnlc/parser/template.cpp',
  'libnlc/parser/top.cpp',
  'libnlc/parser/type.cpp',
  'libnlc/parser/typedef.cpp',
  'libnlc/parser/typeraw.cpp',
  'libnlc/parser/vardecldef.cpp',
  'libnlc/parser/vismarker.cpp',
]
